[package]
name = "anachat-archbtw"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.72"
axum = "0.6.10"
axum-extra = { version = "0.7.7", features = ["spa"] }
chrono = "0.4.26"
mongodb = "2.6.0"
serde = "1.0.179"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-static-folder = "0.21.0"
shuttle-secrets = "0.21.0"
tokio = "1.26.0"
serde_json = "1.0.104"
