[package]
name = "anachat-archbtw"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
axum-extra = { version = "0.7.7"}
chrono = "0.4.26"
mongodb = "2.6.0"
serde = "1.0.183"
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-static-folder = "0.28.0"
shuttle-secrets = "0.23.0"
tokio = "1.31.0"
serde_json = "1.0.104"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs", "trace", "cors"] }
